<resources>
    <string name="app_name">BiSys</string>
    <string name="login">Iniciar Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="rePass">Repita la Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="logo">Logo</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="crear">Crear</string>
    <string name="email">E-mail</string>
    <string name="buscar">Buscar</string>
    <string name="buscarBici">Buscar Bici</string>
    <string name="buscarTerminal">En que Terminal Estás?</string>
    <string name="ingresarTerminal">Ingresá el número de Terminal</string>
    <string name="elegir">Elegí la Bici a Reservar</string>
    <string name="cancelar">Cancelar Turno</string>
    <string name="retirar">Retirar Bici</string>

</resources>
