<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.execsoft.federico.bisys.CreateAccount">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/crearCuenta"
        android:textSize="24sp" />

    <!--  User Label -->
    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/input_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/input_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="textCapWords"
        android:layout_marginTop="54dp"/>

    <!-- Password Label -->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rePass"
        android:inputType="textPassword" />


    <!-- Signin Button -->
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="54dp"
        android:padding="12dp"
        android:background="@color/colorAccent"
        android:text="@string/crear"
        />
</LinearLayout>
