<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.execsoft.federico.bisys.Terminal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/buscarTerminal"
        android:layout_margin="24dp"
        android:textSize="24sp" />

    <!--  Name Label -->
    <EditText
        android:id="@+id/input_terminal"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresarTerminal"
        android:inputType="numberDecimal" />


    <ImageButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/bicycleButton"
        android:scaleType="fitCenter"
        android:paddingBottom="15dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/buscar"
        android:background="@drawable/round_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
